# tacotron2

./: .gitignore  .pylintrc  README.md  config.toml  mel_converter_batch_size_speed_test.py  pyproject.toml  requirements.txt
tacotron2/: config.py  layers.py  ljspeech_data.py  loss_function.py  text_audio_collator.py  text_mel_collator.py  text_processor.py  train.py  utils.py  youtube_data.py
tacotron2/datasets/: youtube.py
tacotron2/tacotron2/: config.py  data_head.py  encoder.py  postnet.py  tacotron2.py  wav2mel_converter.py
tacotron2/tacotron2/decoder/: attention.py  decoder.py  location_layer.py  prenet.py
tests/: test_text_processor.py  test_youtube_data.py
